--- a/Assassin/Localization/assassin_en_US.txt
+++ b/Assassin/Localization/assassin_en_US.txt
@@ -1,5 +1,5 @@
 "UNIT_MINION_ASSASSIN_NAME_0001" = "Assassin"
-"UNIT_MINION_ASSASSIN_LORE" = "Stealthy, agile, and deadly, the assassin is the ultimate killing machine."
+"UNIT_MINION_ASSASSIN_LORE" = "Following the fall of Hammerhold, these stealthy warriors have crossed the sands to fight yet another great evil.\nAssassins are prone to the shadows, only striking the killing blow when the moment is right."
 
 
 "SKILL_assassin_lethal_strike_NAME" = "Lethal Strike"
@@ -9,14 +9,16 @@
 
 "SKILL_assassin_stealth_NAME" = "Invisibility"
 "SKILL_assassin_stealth_DESCRIPTION" = "The Assassin becomes invisible for 2 turns, removing him from enemy prioritization."
-"SKILL_assassin_stealth_DESCRIPTION_EPIC" = "<style="epic">EPIC:</style> Entering stealth while Keen Focus or the Counterattack damage bonus are active will increase the damage bonus by 1."
+"SKILL_assassin_stealth_DESCRIPTION_EPIC" = "<style="epic">EPIC:</style> Entering stealth while Keen Focus is active will give an extra damage bonus."
 "SKILL_assassin_stealth_DESCRIPTION_DATA" = "Duration: <style="highlight">{duration}</style> {icon#turns}\nRange: <style="highlight">SELF</style>"
+"SKILL_assassin_stealth_DESCRIPTION_EXTRA" = "<style="extra">If Bloodlusted is active, the duration will be refreshed.</style>"
 
 
 "SKILL_assassin_counterattack_NAME" = "Counterattack"
 "SKILL_assassin_counterattack_DESCRIPTION" = "Increases melee dodge chance to 100% against the next melee attack and responds with a counterattack."
-"SKILL_assassin_counterattack_DESCRIPTION_EPIC" = "<style="epic">EPIC:</style> Entering Counterattack stance while Keen Focus or the Invisibility damage bonus are active will increase the damage bonus by 1."
+"SKILL_assassin_counterattack_DESCRIPTION_EPIC" = "<style="epic">EPIC:</style> Entering Counter Stance while Keen Focus is active will increase the damage bonus by 1."
 "SKILL_assassin_counterattack_DESCRIPTION_DATA" = "Duration: <style="highlight">{duration}</style> {icon#turns}\nRange: <style="highlight">SELF</style>"
+"SKILL_assassin_counterattack_DESCRIPTION_EXTRA" = "<style="extra">If Bloodlusted is active, the duration will be refreshed.</style>"
 
 "SKILL_assassin_dagger_NAME" = "Pocket Dagger"
 "SKILL_assassin_dagger_DESCRIPTION" = "Quickly flings a dagger to hit an enemy, dealing damage."
@@ -24,7 +26,7 @@
 "SKILL_assassin_dagger_DESCRIPTION_EXTRA" = "<style="extra">The Assassin can use another skill and all remaining movement after this one.</style>"
 
 "SKILL_assassin_backstab_NAME" = "Backstab"
-"SKILL_assassin_backstab_DESCRIPTION" = "The Assassin teleports to the opposite side of the targeted enemy and performs <style="highlight">Lethal Strike</style> on them. If there are no free hexes behind the target, the assassin will teleport in front of them."
+"SKILL_assassin_backstab_DESCRIPTION" = "The Assassin teleports to the OPPOSITE side of the targeted enemy and performs <style="highlight">Lethal Strike</style> on them."
 "SKILL_assassin_backstab_DESCRIPTION_EPIC" = "<style="epic">EPIC:</style> If the target is killed, the assassin gains an increased dodge chance."
 "SKILL_assassin_backstab_DESCRIPTION_DATA" = "EPIC dodge chance: <style="highlight">{dodgeChance}%</style>\nEPIC duration: <style="highlight">{duration} {icon#turns}</style>\nRange: <style="highlight">GLOBAL</style>"
 
@@ -44,14 +46,13 @@
 "COMBAT_MODIFIER_assassin_counterattack_modifier_TITLE" = "Counter Stance"
 "COMBAT_MODIFIER_assassin_counterattack_modifier_DESCRIPTION" = "The assassin will dodge the next melee attack then perform a counterattack."
 
-"COMBAT_MODIFIER_assassin_counterattack_epic_modifier_TITLE" = "Bloodlusted"
-"COMBAT_MODIFIER_assassin_counterattack_epic_modifier_DESCRIPTION" = "This unit has +3 damage."
-
 "COMBAT_MODIFIER_assassin_stealth_modifier_TITLE" = "Invisible"
 "COMBAT_MODIFIER_assassin_stealth_modifier_DESCRIPTION" = "This unit is invisible to enemies and cannot be targeted."
 
-"COMBAT_MODIFIER_assassin_stealth_epic_modifier_TITLE" = "Bloodlusted"
-"COMBAT_MODIFIER_assassin_stealth_epic_modifier_DESCRIPTION" = "This unit has +3 damage."
+"COMBAT_MODIFIER_assassin_bloodlust_modifier_TITLE" = "Bloodlusted"
+"COMBAT_MODIFIER_assassin_bloodlust_modifier_DESCRIPTION" = "This unit has +3 damage."
 
-"COMBAT_MODIFIER_assassin_stealth_epic_epic_modifier_TITLE" = "Do Or Die"
-"COMBAT_MODIFIER_assassin_stealth_epic_epic_modifier_DESCRIPTION" = "This unit has +4 damage."
+"COMBAT_MODIFIER_assassin_dodge_increase_modifier_TITLE" = "Evasive Action"
+"COMBAT_MODIFIER_assassin_dodge_increase_modifier_DESCRIPTION" = "This unit has increased dodge chance."
+
+
